--- a/public/uninstall.html
+++ b/public/uninstall.html
@@ -54,6 +54,26 @@
       submitBtn.textContent = show ? '提交中...' : '提交';
     }
 
+    function jsonp(url, data) {
+      return new Promise((resolve, reject) => {
+        const callbackName = 'jsonp_' + Date.now();
+        window[callbackName] = (response) => {
+          document.body.removeChild(script);
+          delete window[callbackName];
+          resolve(response);
+        };
+
+        const script = document.createElement('script');
+        const params = new URLSearchParams({
+          ...data,
+          callback: callbackName
+        });
+        script.src = `${url}?${params}`;
+        script.onerror = reject;
+        document.body.appendChild(script);
+      });
+    }
+
     // 提交反馈
     async function handleSubmit() {
       const feedbackText = document.querySelector('.feedback-input').value;
@@ -78,16 +98,7 @@
       toggleLoading(true);
 
       try {
-        const response = await fetch('https://api.vance.xin/api/feedback/save', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify(submitData)
-        });
-
-        const data = await response.json();
-
+        const data = await jsonp('https://api.vance.xin/api/feedback/save', submitData);
         if (data.result === 0) {
           // 提交成功
           const feedbackContainer = document.querySelector('.feedback-container');
