--- a/public/uninstall.html
+++ b/public/uninstall.html
@@ -54,26 +54,6 @@
       submitBtn.textContent = show ? '提交中...' : '提交';
     }
 
-    function jsonp(url, data) {
-      return new Promise((resolve, reject) => {
-        const callbackName = 'jsonp_' + Date.now();
-        window[callbackName] = (response) => {
-          document.body.removeChild(script);
-          delete window[callbackName];
-          resolve(response);
-        };
-
-        const script = document.createElement('script');
-        const params = new URLSearchParams({
-          ...data,
-          callback: callbackName
-        });
-        script.src = `${url}?${params}`;
-        script.onerror = reject;
-        document.body.appendChild(script);
-      });
-    }
-
     // 提交反馈
     async function handleSubmit() {
       const feedbackText = document.querySelector('.feedback-input').value;
@@ -98,7 +78,16 @@
       toggleLoading(true);
 
       try {
-        const data = await jsonp('https://api.vance.xin/api/feedback/save', submitData);
+        const response = await fetch('https://api.vance.xin/api/feedback/save', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Accept': 'application/json'
+          },
+          body: JSON.stringify(submitData)
+        });
+
+        const data = await response.json();
         if (data.result === 0) {
           // 提交成功
           const feedbackContainer = document.querySelector('.feedback-container');
